crates/uv-lock/src/lock/snapshots/uv_lock__lock__tests__source_direct_no_subdir.snap
---
source: crates/uv-lock/src/lock/mod.rs
expression: result
---
Ok(
    Lock {
        version: 1,
        revision: 0,
        fork_markers: [],
        conflicts: Conflicts(
            [],
        ),
        supported_environments: [],
        required_environments: [],
        requires_python: RequiresPython {
            specifiers: VersionSpecifiers(
                [
                    VersionSpecifier {
                        operator: GreaterThanEqual,
                        version: "3.12",
                    },
                ],
            ),
            range: RequiresPythonRange(
                LowerBound(
                    Included(
                        "3.12",
                    ),
                ),
                UpperBound(
                    Unbounded,
                ),
            ),
        },
        options: ResolverOptions {
            resolution_mode: Highest,
            prerelease: Prerelease {
                global: IfNecessary,
                package: PrereleasePackage(
                    {},
                ),
            },
            fork_strategy: RequiresPython,
            minimum_libc_version: None,
            exclude_newer: ExcludeNewer {
                global: None,
                package: ExcludeNewerPackage(
                    {},
                ),
            },
        },
        packages: [
            Package {
                id: PackageId {
                    name: PackageName(
                        "anyio",
                    ),
                    version: Some(
                        "4.3.0",
                    ),
                    source: Direct(
                        UrlString(
                            "https://burntsushi.net",
                        ),
                        DirectSource {
                            subdirectory: None,
                        },
                    ),
                },
                sdist: None,
                wheels: [],
                fork_markers: [],
                dependencies: [],
                optional_dependencies: {},
                dependency_groups: {},
                metadata: PackageMetadata {
                    requires_dist: {},
                    provides_extra: [],
                    dependency_groups: {},
                },
            },
        ],
        by_id: {
            PackageId {
                name: PackageName(
                    "anyio",
                ),
                version: Some(
                    "4.3.0",
                ),
                source: Direct(
                    UrlString(
                        "https://burntsushi.net",
                    ),
                    DirectSource {
                        subdirectory: None,
                    },
                ),
            }: PackageIndex(
                0,
            ),
        },
        manifest: ResolverManifest {
            members: {},
            default_groups: {},
            group_metadata: {},
            requirements: {},
            dependency_groups: {},
            constraints: {},
            overrides: {},
            excludes: {},
            build_constraints: {},
            dependency_metadata: {},
        },
    },
)
